# weight-tracker

./: .gitignore  Makefile  docker-compose.yaml
.github/workflows/: deploy.yaml
app/: .gitignore  .metadata  README.md  analysis_options.yaml  build.yaml  pubspec.yaml  slang.yaml
app/android/app/: build.gradle
app/i18n/en_US/: category_en.i18n.yaml  common_en.i18n.yaml  errors_en.i18n.yaml  signin_en.i18n.yaml  task_en.i18n.yaml
app/i18n/ru_RU/: category_ru.i18n.yaml  common_ru.i18n.yaml  errors_ru.i18n.yaml  signin_ru.i18n.yaml  task_ru.i18n.yaml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/core/: utils.dart
app/lib/core/api/: chopper.dart
app/lib/core/navigation/: bottomsheets.dart  pages.dart
app/lib/core/provider/: api.dart  bloc.dart  mappers.dart  (+4 more)
app/lib/i18n/: strings.g.dart
app/lib/logger/: event.dart  logger.dart  storage.dart
app/lib/navigation/: navigator.dart  router.dart  routes_name.dart  scaffold.dart
app/lib/pages/: home.dart  login.dart
app/test/: widget_test.dart
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
back/: .env.example  .gitignore  pyproject.toml
back/api/: Dockerfile  config.py  requirements.txt
back/api/database/: database.py  models.py
back/api/migrations/: env.py
back/api/migrations/versions/: 9fe8b0c054e3_init.py
back/api/src/: app.py  utils.py
back/api/src/schemas/: auth.py  review.py  room.py  user.py
back/api/src/v1/: api.py  auth.py  user.py  weight.py
back/dumps/: main.sql
nginx/: mime.types  nginx.conf
(+100 files in other folders)
